--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Solutions</title>
     <link rel="stylesheet" href="style.css">
 </head>  
 <body>
@@ -60,4 +60,5 @@
         </div>
     </footer>  
 </body>
+
 </html>
